git-annex (10.20250829) UNRELEASED; urgency=medium

  * drop: --fast support when dropping from a remote.
  * Fix crash operating on filenames that are exactly 21 bytes long
    and begin with a utf-8 character.
  * git-annex.cabal: Turn on the OsPath build flag by default.
  * Add build warnings when git-annex is built without the OsPath
    build flag.
  * version: Report on whether it was built with the OsPath build flag.
  * Avoid leaking file descriptors to child processes started by git-annex
    in some situations. Note that when not built with the OsPath build
    flag, these leaks can still happen.
  * Improve performance when used with a local git remote that has a
    large working tree.
  * Removed support for building with cryptonite, use crypton.
  * p2phttp: Fix a hang that could occur when used with --directory,
    and a repository in the repository got removed.

 -- Joey Hess <id@joeyh.name>  Fri, 29 Aug 2025 12:34:06 -0400

git-annex (10.20250828) upstream; urgency=medium

  * p2p: Added --enable option, which can be used to enable P2P networks
    provided by external commands git-annex-p2p-<netname>
  * Added git-remote-p2p-annex, which allows git pull and push to
    P2P networks provided by commands git-annex-p2p-<netname>
  * S3: Default to signature=v4 when using an AWS endpoint, since some
    AWS regions need v4 and all support it. When host= is used to specify
    a different S3 host, the default remains signature=v2.
  * webapp: Support setting up S3 buckets in regions that need v4
    signatures.
  * S3: When initremote is given the name of a bucket that already exists,
    automatically set datacenter to the right value, rather than needing it
    to be explicitly set.
  * info: Added --show option to pick which parts of the info to calculate
    and display.
  * Improve behavior when there are special remotes configured with
    autoenable=yes with names that conflict with other remotes.